made changes to window classes